in the end, it's a fixed-width (A4) page + always-on scrollbar

--- a/_sass/newtype.scss
+++ b/_sass/newtype.scss
@@ -1,5 +1,9 @@
 @import "syntax";
 
+$page-width: 210mm;
+$logo-width: 70mm;
+$title-width: $page-width - $logo-width;
+
 .site-logo {
     grid-area: site-logo;
 }
@@ -38,6 +42,7 @@
 @media(min-width: 128px) {
     .site-container {
         display: grid;
+        justify-content: center;
         justify-items: center;
         grid-template-columns: minmax(128px, auto);
         grid-template-rows: min-content minmax(2rem, min-content)
@@ -66,31 +71,30 @@
 }
 @media(min-width: 1000px) {
     .site-container {
+        overflow-y: scroll;
         display: grid;
-        justify-items: stretch;
-        grid-template-columns: auto 50mm 160mm auto;
+        justify-content: center;
+        grid-template-columns: $logo-width $title-width;
         grid-template-rows: minmax(2rem, min-content) minmax(2rem, min-content) 2rem 2rem  auto  min-content 8rem;
         grid-template-areas:
-            " margin-left site-logo        site-title    margin-right "
-            " margin-left site-logo     site-description margin-right "
-            " margin-left .                contacts      margin-right "
-            " margin-left navigation      navigation     margin-right "
-            " margin-left content           content      margin-right "
-            " margin-left comments         comments      margin-right "
-            " margin-left footer            footer       margin-right ";
+            " site-logo        site-title    "
+            " site-logo     site-description "
+            " .                contacts      "
+            " navigation      navigation     "
+            " content           content      "
+            " comments         comments      "
+            " footer            footer       ";
     }
 
     .site-logo {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        margin: 2rem;
     }
 }
 
 .site-logo > img {
-    max-width: 300px;
-    width: 100%;
+    width: $logo-width;
     flex-shrink: 0;
 }
 
